--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
   "name": "@pi-team-mn/raw-database",
   "description": "Read raw JSON files and parse them into an in memory database",
-  "version": "1.0.0",
-  "main": "index.js",
+  "author": "pi-team@mn.nl (David Diks <david.diks@mn.nl>)",
+  "version": "1.0.3",
+  "main": "./out/main.js",
+  "types": "./out/main.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require ts-node/register ./src/**.spec.ts",
+    "tsc": "tsc",
+    "deploy": "npm publish --access public",
+    "publish": "npm run tsc && npm run deploy"
   },
+  "files": [
+    "./src/**",
+    "!**.spec.**"
+  ],
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.5",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "ts-node": "^8.5.3",
     "typescript": "^3.7.2"
   }
 }
