--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@pi-team-mn/raw-database",
   "description": "Read raw JSON files and parse them into an in memory database",
   "author": "pi-team@mn.nl (David Diks <david.diks@mn.nl>)",
-  "version": "1.0.3",
-  "main": "./out/main.js",
-  "types": "./out/main.d.ts",
+  "version": "1.1.0",
+  "main": "lib/main.js",
+  "types": "lib/main.d.ts",
   "scripts": {
     "test": "mocha --require ts-node/register ./src/**.spec.ts",
     "tsc": "tsc",
@@ -12,8 +12,8 @@
     "publish": "npm run tsc && npm run deploy"
   },
   "files": [
-    "./src/**",
-    "!**.spec.**"
+    "lib/**",
+    "!lib/**.spec.**"
   ],
   "keywords": [],
   "license": "MIT",
